--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^9.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
