--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-spring": "^8.0.27",
+    "react-touch": "^0.4.4",
     "react-use-gesture": "^9.0.4",
     "save": "^2.4.0",
     "web-vitals": "^1.0.1"
