--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-touch": "^0.4.4",
     "react-use-gesture": "^9.0.4",
     "save": "^2.4.0",
+    "use-double-tap": "^1.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
