--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "axios-hooks": "^2.3.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.6",
     "node-sass": "^5.0.0",
