--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.4.3",
     "react-delay": "^0.1.0",
     "react-dom": "^17.0.1",
+    "react-lodash": "^0.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-spring": "^8.0.27",
