--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-touch": "^0.4.4",
     "react-use-gesture": "^9.0.4",
     "save": "^2.4.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
