--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-spring": "^8.0.27",
     "react-touch": "^0.4.4",
     "react-use-gesture": "^9.0.4",
+    "recoil": "^0.1.3",
     "save": "^2.4.0",
     "styled-components": "^5.2.1",
+    "use-double-click": "^1.0.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
