--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "save": "^2.4.0",
     "styled-components": "^5.2.1",
     "use-double-click": "^1.0.5",
+    "use-scroll-to-bottom": "^1.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
