--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-bottom-scroll-listener": "^5.0.0",
     "react-delay": "^0.1.0",
     "react-dom": "^17.0.1",
     "react-lodash": "^0.1.2",
@@ -30,7 +31,6 @@
     "save": "^2.4.0",
     "styled-components": "^5.2.1",
     "use-double-click": "^1.0.5",
-    "use-scroll-to-bottom": "^1.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
