--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
-    "react-bottom-scroll-listener": "^5.0.0",
     "react-delay": "^0.1.0",
     "react-dom": "^17.0.1",
     "react-lodash": "^0.1.2",
@@ -27,6 +26,7 @@
     "react-spring-bottom-sheet": "^3.2.1",
     "react-touch": "^0.4.4",
     "react-use-gesture": "^9.0.4",
+    "react-waypoint": "^10.1.0",
     "recoil": "^0.1.3",
     "save": "^2.4.0",
     "styled-components": "^5.2.1",
